--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@
 }
 
 .header__title {
+  margin: 0;
   max-width: 730px;
   align-self: center;
   margin-left: 64px;
@@ -119,7 +120,6 @@
 }
 
 .digits {
-  outline: 1px solid red;
   margin: 0 auto;
 }
 
@@ -144,13 +144,16 @@
 }
 
 .table {
+  margin-left: 0;
+  padding-left: 0;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   max-width: 1100px;
-  margin-bottom: 100px;
   flex-wrap: wrap;
   justify-content: space-between;
+  z-index: 2;
+  list-style-type: none;
 }
 
 .table__cell {
@@ -175,7 +178,7 @@
 
 .feynman {
   display: flex;
-  height: 890px;
+  min-height: 890px;
   position: relative;
   flex-direction: column;
   background-color: #f2f2f2;
@@ -227,8 +230,19 @@
   padding-top: 90px;
   padding-bottom: 90px;
   overflow: hidden;
-
   color: white;
+  z-index: 0;
+}
+
+.kaufman__triangle {
+  background-image: url("../images/logo/kaufman-triangle.svg");
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  background-size: contain;
+  z-index: -2;
 }
 
 .section-title_theme_dark {
@@ -254,7 +268,6 @@
   width: 200px;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 2;
 }
 
 .table__heading_theme_dark {
@@ -262,7 +275,6 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  z-index: 2;
 }
 
 .table__text_theme_dark {
@@ -271,17 +283,6 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  z-index: 2;
-}
-
-.kaufman__triangle {
-  background-image: url("../images/logo/kaufman-triangle.svg");
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  top: 0px;
-  right: -210px;
-  z-index: 1;
 }
 
 .footer {
@@ -295,15 +296,15 @@
   margin: 0 auto;
   display: flex;
   width: 90%;
-
   margin-top: 60px;
   margin-bottom: 40px;
   justify-content: space-between;
 }
-.footer__column_content-copyright {
+.footer__column_content_copyright {
   display: flex;
   flex-basis: 711px;
-  position: relative;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .logo_place_footer {
@@ -311,32 +312,36 @@
 }
 
 .footer__author {
-  position: absolute;
-  bottom: 18px;
-  left: 0;
+  margin: 0;
+  margin-bottom: 18px;
+  margin-left: 0px;
+  margin-top: 18px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  width: max-content;
 }
 
-.footer__column_content-info {
-  display: flex;
-  flex-direction: column;
+.footer__column_content_info {
   height: 100%;
 }
 
-.footer__column-social {
-  display: flex;
-  flex-direction: column;
+.footer__column_content_social {
   color: white;
 }
 
 .footer__column-links {
+  margin-bottom: 16px;
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.footer__column-link {
   text-decoration: none;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 10px;
   color: white;
 }
 
@@ -352,13 +357,4 @@
   width: 16px;
   height: 16px;
   margin-right: 10px;
-}
-
-li {
-  list-style-type: none;
-}
-
-ul {
-  margin-left: 0;
-  padding-left: 0;
 }
