--- a/styles/style.css
+++ b/styles/style.css
@@ -108,6 +108,7 @@
 }
 
 .two-columns__pharagraph {
+  margin: 0 auto;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -121,6 +122,7 @@
 
 .digits {
   margin: 0 auto;
+  padding-bottom: 100px;
 }
 
 .section-title {
@@ -331,6 +333,7 @@
 }
 
 .footer__column-links {
+  margin: 0 auto;
   margin-bottom: 16px;
   list-style-type: none;
   margin-left: 0;
