--- a/pages/index.css
+++ b/pages/index.css
@@ -14,17 +14,17 @@
 @import url(/blocks/two-columns/__main/two-columns__main-text.css);
 @import url(/blocks/two-columns/__brief/two-columns__brief.css);
 @import url(/blocks/digits/digits.css);
-@import url(/blocks/digits/table/table.css);
+@import url(/blocks/table/table.css);
 @import url(/blocks/section/section-title.css);
 @import url(/blocks/section/section-subtitle.css);
 @import url(/blocks/section/_theme/section-title_theme_dark.css);
 @import url(/blocks/section/_theme/section-subtitle_theme_dark.css);
-@import url(/blocks/digits/table/__cell/table__cell.css);
-@import url(/blocks/digits/table/__cell/_theme/table__cell_theme_dark.css);
-@import url(/blocks/digits/table/__heading/table__heading.css);
-@import url(/blocks/digits/table/__heading/_theme/table__heading_theme_dark.css);
-@import url(/blocks/digits/table/__text/table__text.css);
-@import url(/blocks/digits/table/__text/_theme/table__text_theme_dark.css);
+@import url(/blocks/table/__cell/table__cell.css);
+@import url(/blocks/table/__cell/_theme/table__cell_theme_dark.css);
+@import url(/blocks/table/__heading/table__heading.css);
+@import url(/blocks/table/__heading/_theme/table__heading_theme_dark.css);
+@import url(/blocks/table/__text/table__text.css);
+@import url(/blocks/table/__text/_theme/table__text_theme_dark.css);
 @import url(/blocks/techniques/techniques.css);
 @import url(/blocks/techniques/cards/cards.css);
 @import url(/blocks/techniques/cards/__title/cards__title.css);
@@ -58,12 +58,12 @@
 @import url(/blocks/footer/footer.css);
 @import url(/blocks/footer/__author/footer__author.css);
 @import url(/blocks/footer/__columns/footer__columns.css);
-@import url(/blocks/footer/__columns/__column/footer__column-heading.css);
-@import url(/blocks/footer/__columns/__column/footer__column-link.css);
-@import url(/blocks/footer/__columns/__column/footer__column-links.css);
-@import url(/blocks/footer/__columns/__column/_content/footer__column_content_copyright.css);
-@import url(/blocks/footer/__columns/__column/_content/footer__column_content_info.css);
-@import url(/blocks/footer/__columns/__column/_content/footer__column_content_social.css);
+@import url(/blocks/footer/__column/footer__column-heading.css);
+@import url(/blocks/footer/__column/footer__column-link.css);
+@import url(/blocks/footer/__column/footer__column-links.css);
+@import url(/blocks/footer/__column/_content/footer__column_content_copyright.css);
+@import url(/blocks/footer/__column/_content/footer__column_content_info.css);
+@import url(/blocks/footer/__column/_content/footer__column_content_social.css);
 @import url(/blocks/footer/__social/footer__social-icon.css);
 @import url(/blocks/rotation/kaufman__triangle-rotation.css);
 @import url(/blocks/rotation/header__square-pic-rotation.css);
