--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-  background-image: url("/images/logo/kaufman-triangle.svg");
+  background-image: url("../../../images/logo/kaufman-triangle.svg");
   width: 877px;
   height: 877px;
   position: absolute;
