--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -1,4 +1,4 @@
-.header__square-pic-rotatiion {
+.rotation {
   -webkit-animation: spin 20s linear infinite;
   -moz-animation: spin 20s linear infinite;
   animation: spin 20s linear infinite;
